// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SemesterService deleteSemester should delete a semester and ensure courses have null value for semester 1`] = `
[
  CourseModel {
    "course_code": "COSC 499",
    "course_name": "Capstone Project",
    "created_at": "1000000000",
    "id": 1,
    "invite_code": "123",
    "is_archived": false,
    "section_name": "001",
    "semester": null,
    "updated_at": "1000000000",
  },
  CourseModel {
    "course_code": "COSC 499",
    "course_name": "Capstone Project",
    "created_at": "1000000000",
    "id": 2,
    "invite_code": "123",
    "is_archived": false,
    "section_name": "001",
    "semester": null,
    "updated_at": "1000000000",
  },
  CourseModel {
    "course_code": "COSC 499",
    "course_name": "Capstone Project",
    "created_at": "1000000000",
    "id": 3,
    "invite_code": "123",
    "is_archived": false,
    "section_name": "001",
    "semester": null,
    "updated_at": "1000000000",
  },
  CourseModel {
    "course_code": "COSC 499",
    "course_name": "Capstone Project",
    "created_at": "1000000000",
    "id": 4,
    "invite_code": "123",
    "is_archived": false,
    "section_name": "001",
    "semester": null,
    "updated_at": "1000000000",
  },
  CourseModel {
    "course_code": "COSC 499",
    "course_name": "Capstone Project",
    "created_at": "1000000000",
    "id": 5,
    "invite_code": "123",
    "is_archived": false,
    "section_name": "001",
    "semester": null,
    "updated_at": "1000000000",
  },
  CourseModel {
    "course_code": "COSC 499",
    "course_name": "Capstone Project",
    "created_at": "1000000000",
    "id": 6,
    "invite_code": "123",
    "is_archived": false,
    "section_name": "001",
    "semester": null,
    "updated_at": "1000000000",
  },
  CourseModel {
    "course_code": "COSC 499",
    "course_name": "Capstone Project",
    "created_at": "1000000000",
    "id": 7,
    "invite_code": "123",
    "is_archived": false,
    "section_name": "001",
    "semester": null,
    "updated_at": "1000000000",
  },
  CourseModel {
    "course_code": "COSC 499",
    "course_name": "Capstone Project",
    "created_at": "1000000000",
    "id": 8,
    "invite_code": "123",
    "is_archived": false,
    "section_name": "001",
    "semester": null,
    "updated_at": "1000000000",
  },
  CourseModel {
    "course_code": "COSC 499",
    "course_name": "Capstone Project",
    "created_at": "1000000000",
    "id": 9,
    "invite_code": "123",
    "is_archived": false,
    "section_name": "001",
    "semester": null,
    "updated_at": "1000000000",
  },
  CourseModel {
    "course_code": "COSC 499",
    "course_name": "Capstone Project",
    "created_at": "1000000000",
    "id": 10,
    "invite_code": "123",
    "is_archived": false,
    "section_name": "001",
    "semester": null,
    "updated_at": "1000000000",
  },
]
`;

exports[`SemesterService getAllSemesters should return all semesters 1`] = `
[
  SemesterModel {
    "course_count": 10,
    "created_at": "1000000",
    "ends_at": "1000000",
    "id": 1,
    "name": "Test Semester",
    "starts_at": "1000000",
    "updated_at": "1000000",
  },
]
`;

exports[`SemesterService getSemesterById should return a semester 1`] = `
SemesterModel {
  "created_at": "1000000",
  "ends_at": "1000000",
  "id": 1,
  "name": "Test Semester",
  "starts_at": "1000000",
  "updated_at": "1000000",
}
`;
